[package]
name = "mov2mp4"
version = "0.1.0"
edition = "2021"
authors = ["Brian Yang <brian96tw@gmail.com>"]
description = "A CLI tool to convert MOV files to MP4 format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.3"
tracing = "0.1"
tracing-subscriber = "0.3"
